Fix colours to be legible when not using my dark mode extension

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@
 }
 
 header, footer {
-    background-color: var(--accent);
+    background-color: var(--accent-bg);
 }
 
 body {
